<resources>
    <string name="app_name">Tip&amp;Go</string>
    <string name="login_title">Login</string>
    <string name="login_action">Login</string>
    <string name="phone">Phone</string>
    <string name="organization_title">Organization</string>
    <string name="receive_code_action">Send code</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="country">Country</string>
    <string name="password_recovery">Forgot password?</string>
    <string name="resend">Resend</string>
    <string name="password_recovery_title">Password recovery</string>
    <string name="password_recovery_button">Recover password</string>
    <string name="registration_title">Registration</string>
    <string name="approve_registration">Approve</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="average_rating">Average rating</string>
    <string name="less_then_2"><![CDATA[<2]]></string>
    <string name="tips_title">Tips</string>
    <string name="reviews_title">Reviews</string>
    <string name="read_the_review">Read the review</string>
    <string name="dialog_rating">Rating</string>
    <string name="feedback_title">Feedback:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="review_details">Review details</string>
    <string name="balance_title">Balance</string>
    <string name="balance_withdraw">Withdraw</string>
    <string name="chip_day">Day</string>
    <string name="chip_week">Week</string>
    <string name="chip_month">Month</string>
    <string name="chip_year">Year</string>
    <string name="staff_list_title">Staff</string>
    <string name="staff_description">Staff description</string>
    <string name="history_of_withdrawals_title">History of withdrawals</string>
    <string name="history_of_withdrawals_description">The history of all withdrawals</string>
    <string name="organizations_title">Organizations</string>
    <string name="organizations_description">List of your organizations</string>
    <string name="settings_and_notifications_title">Settings and notifications</string>
    <string name="settings_and_notifications_description">Profile settings and notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_tab">Profile</string>
    <string name="reviews_tab">Reviews</string>
    <string name="tips_tab">Tips</string>
    <string name="dashboard_tab">Dashboard</string>
    <string name="add_organization">+ Organization</string>
    <string name="upload_logo_sign">Upload logo</string>
    <string name="organization_brand">Brand</string>
    <string name="organization_new_brand_name">New brand name</string>
    <string name="organization_name">Organization name</string>
    <string name="organization_legal_entity_name">Legal entity name</string>
    <string name="add_new_user">+ Staff</string>
    <string name="staff_role">Role</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="staff_position">Position</string>
    <string name="save_action">Save</string>
    <string name="add_new_organization">Add new organization</string>
    <string name="add_an_employee">Add an employee</string>
    <string name="new_brand_name">New Brand</string>
    <string name="employee_title">Employee</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="distributed_tips_title">Distributed tips</string>
    <string name="distributed_tips_description">The history of tips distributed to staff</string>
    <string name="distributed_tips_fragment_title">The history of tips distributed</string>
    <string name="employee_name">Employee name</string>
    <string name="edit_employee_title">Edit employee</string>
    <string name="select_employee_title">Select employees</string>
    <string name="select_all_checkbox">Select all</string>
    <string name="tip_distribution_title">Tip distribution</string>
    <string name="select_tips_title">Select tips to share</string>
    <string name="back_action">Back</string>
    <string name="invoice_total_hint">Invoice total</string>
    <string name="table_number_hint">Table #</string>
    <string name="settings_title">Settings</string>
    <string name="distribute">Distribute</string>
    <string name="tips_distributed_successfully">Tips were successfully distributed to staff accounts</string>
    <string name="ok_text">OK</string>
    <string name="employee_qr_code">Employee QR code</string>
    <string name="employee_qr_code_description">Create a QR code or view an existing one</string>
    <string name="info_tab">Info</string>
    <string name="user_successfully_added">User successfully added</string>
    <string name="employee_update_success">Employee info been updated!</string>
    <string name="change_logo">Change logo</string>
    <string name="add_card">Add card</string>
    <string name="my_cards">My Cards</string>
    <string name="upload_photo">Upload photo</string>
    <string name="change_photo">Change photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notifications">Notifications</string>
    <string name="withdraw">Withdraw</string>
    <string name="card">Card</string>
    <string name="amount">Amount</string>
    <string name="operation_successful">Operation successful</string>
    <string name="fill_brand_name">Fill brand name</string>
    <string name="profile_updated">Profile updated</string>
    <string name="fill_requested_fields">Fill requested fields</string>
    <string name="qr_code">Qr code</string>
    <string name="permission_denied">Permission denied</string>
    <string name="operation_canceled">Operation canceled</string>
    <string name="operation_declined">Operation declined</string>
    <string name="operation_failed">Operation failed</string>
    <string name="edit_profile">Edit profile</string>
    <string name="send_recovery_link">Send recovery link</string>
    <string name="settings_saved">Settings saved</string>
    <string name="select_bank_card">Select bank card</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="select_amount_to_withdraw">Select amount to withdraw</string>
    <string name="edit_organization">Edit organization</string>
</resources>