<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CustomCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/between_margin"
        android:layout_marginTop="@dimen/between_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="vertical">

        <com.highsoft.highcharts.core.HIChartView
            android:id="@+id/tips_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/chip_day"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/chip_week"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/chip_month"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chip_year"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>