<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CustomCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/between_margin"
        android:layout_marginTop="@dimen/between_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/reviews_view_pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chart_height" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/reviews_tab_layout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tab_indicator_size"
            android:layout_gravity="center|bottom"
            app:tabRippleColor="@null"
            app:tabBackground="@drawable/tab_indicator_inactive"
            app:tabIndicator="@drawable/tab_indicator_active"
            app:tabIndicatorHeight="8dp"
            app:tabMaxWidth="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/chip_day"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/chip_week"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_weight="1"
                android:text="@string/chip_month"
                android:textAlignment="center" />

            <com.google.android.material.chip.Chip
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chip_year"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>