<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/Heading1"
            android:text="@string/edit_employee_title"
            tools:text="Title" />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="@dimen/close_button_size"
            android:layout_height="@dimen/close_button_size"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/between_margin"
            android:scaleType="center"
            android:src="@drawable/icon_close"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_margin"
        android:layout_marginHorizontal="@dimen/between_margin">

        <TextView
            android:id="@+id/staff_role_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="14dp"
            android:text="@string/staff_role"
            android:textColor="@color/grey"/>

        <Spinner
            android:id="@+id/role_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_text_input_height"
            android:background="@drawable/custom_text_input_bg" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/staff_position"
        style="@style/CustomTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/between_margin"
        android:layout_marginTop="@dimen/between_margin"
        android:hint="@string/staff_position"
        app:hintTextAppearance="@style/Tags2">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sides_margin"
        android:layout_marginTop="@dimen/bottom_margin"
        android:text="@string/save_action"
        android:backgroundTint="@color/blue"
        android:textAllCaps="false" />

</LinearLayout>