<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/between_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/organization_logo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/between_margin"
                android:src="@drawable/logo_placeholder"
                tools:ignore="ContentDescription" />

            <FrameLayout
                android:id="@+id/logo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/between_margin"
                android:paddingBottom="@dimen/small_margin"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_logo_sign"
                    android:textAppearance="@style/Paragraph2.Blue" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_text_input_height"
                android:background="@drawable/custom_text_input_bg"
                android:orientation="horizontal">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/brand_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/organization_brand"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionDone"
                    android:textAppearance="@style/Paragraph2" />

                <ImageView
                    android:id="@+id/organization_brand_edit"
                    android:layout_width="@dimen/close_button_size"
                    android:layout_height="@dimen/close_button_size"
                    android:layout_gravity="center"
                    android:layout_marginEnd="13dp"
                    android:layout_weight="0"
                    android:scaleType="center"
                    android:src="@drawable/icon_edit"
                    android:visibility="gone"
                    tools:ignore="ContentDescription"
                    tools:visibility="visible" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_new_brand_name"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/organization_new_brand_name"
                android:visibility="gone"
                app:hintTextAppearance="@style/Tags2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextEdit"
                    android:inputType="textNoSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_name"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/organization_name"
                app:hintTextAppearance="@style/Tags2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_legal_entity_name"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/organization_legal_entity_name"
                app:hintTextAppearance="@style/Tags2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/country_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/custom_text_input_bg" >

                <TextView
                    android:id="@+id/country_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="14dp"
                    android:text="@string/country"
                    android:textColor="@color/grey"/>

                <Spinner
                    android:id="@+id/country_selector"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/custom_text_input_height"/>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_email"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/email"
                app:hintTextAppearance="@style/Tags2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.tip_n_go.ui.custom.CustomPhoneEditText
                android:id="@+id/organization_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_text_input_height"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_website"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/website"
                app:hintTextAppearance="@style/Tags2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/organization_address"
                style="@style/CustomTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:hint="@string/address"
                app:hintTextAppearance="@style/Tags2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/between_margin"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:backgroundTint="@color/blue"
                android:text="@string/save_action"
                android:textAllCaps="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>