<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/Heading1"
            android:text="@string/password_recovery"/>

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="@dimen/close_button_size"
            android:layout_height="@dimen/close_button_size"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/between_margin"
            android:scaleType="center"
            android:src="@drawable/icon_close"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/CustomTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/between_margin"
        android:layout_marginTop="@dimen/between_margin"
        android:hint="@string/email"
        app:hintTextAppearance="@style/Tags2">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/CustomTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_recovery_link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/sides_margin"
        android:layout_marginTop="@dimen/bottom_margin"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/send_recovery_link"
        android:backgroundTint="@color/blue"
        android:textAllCaps="false" />

</LinearLayout>